--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -280,6 +280,83 @@
 		\newpage
 \end{homework}
 
+\begin{homework}
+	\exercise{Pálení uhlí}
+		Černé uhlí je tvořeno z převážné části uhlíkem. Spálením $M=1\unit{kg}$ uhlíku se uvolní $Q=33\unit{MJ}$ energie ve formě tepla.
+		\begin{enumerate}
+			\item 
+				Jaká hmotnost oxidu uhličitého $\ce{CO2}$ vznikne spálením $M=1\unit{kg}$ uhlíku, tj. při reakci
+				\begin{equation*}
+					\ce{C + O2 -> CO2}?
+				\end{equation*}
+
+			\item
+				Kolik litrů vody ohřejete z pokojové teploty na teplotu varu spálením $M=1\unit{kg}$ uhlíku za předpokladu, že se veškerá energie vzniklá hořením uhlíku využije na ohřev vody?
+
+			\item
+				Důsledkem relativistické relace mezi energií a hmotností $E=mc^{2}$, kde $c$ je rychlost světla, se bude hmotnost vzniklého $\ce{CO2}$ lišit od hmotnosti reaktantů $\ce{C}$ a $\ce{O2}$.
+				Jak velký bude tento rozdíl?
+
+				Tepelná elektrárna spálí $10$ tun uhlí za minutu.
+				Kolik let musí elektrárna běžet, aby byl tento relativistický rozdíl $m=1\unit{kg}$?
+				Předpokládejte, že pálené uhlí je tvořeno pouze uhlíkem.
+		\end{enumerate}
+
+		\newpage
+\end{homework}
+
+\begin{homework}
+	\exercise{Zhroucení Slunce}
+		Předpokládejte, že naše Slunce se po vyhoření zhroutí a vznikne z něj bílý trpaslík tvořený pouze uhlíkem $^{12}\mathrm{C}$.  
+		Předpokládejte, že hustota trpaslíka je konstantní.
+
+		\begin{enumerate}
+			\item Spočítejte Fermiho energii $E_{F}$ nerelativistického elektronového degenerovaného plynu a Fermiho rychlost $v_{F}$ danou vztahem
+			\begin{equation*}
+				E_{F}=\frac{1}{2}m_{e}v_{F}^{2}.
+			\end{equation*}
+			Vyjádřete Fermiho rychlost v násobcích rychlosti světla.
+			Je nerelativistická aproximace oprávněná?
+			
+			\item Na základě uvedených předpokladů určete poloměr vzniklého bílého trpaslíka.
+
+			\item Předpokládejte, že degenerovaný elektronový plyn je ultrarelativistický a určete Chandrasekharovu mez.
+				Najděte její číselnou hodnotu vyjádřenou v násobcích hmotnosti Slunce.
+			
+			\item Je-li hvězda těžší, než kolik udává Chandrasekharova mez, dojde k jejímu dalšímu zhroucení a vznikne neutronová hvězda.
+			Spočítejte mezní hmotnost pro sférickou hvězdu o konstantní hustotě tvořenou degenerovaným neutronovým plynem (nazývá se Tolmanova-Oppenheimerova-Volkoffova mez) a vyjádřete ji v násobcích hmotnosti Slunce.
+		\end{enumerate}
+
+		{\it Poznámka:} Předpoklad konstantní hustoty je velmi hrubý. 
+		Po započtení hustoty správně rostoucí s hloubkou pod povrchem a dalších korekcí vycházejí obě meze nižší.
+
+		\newpage
+\end{homework}
+
+\begin{homework}
+	\exercise{Kvantové provázání a teleportace}
+	\begin{enumerate}
+		\item 
+		Rozhodněte, zda stav dvou qubitů
+		\begin{equation*}
+			\ket{\Phi}=\mathcal{N}\left(2\ket{\uparrow\uparrow}+\im\ket{\downarrow\uparrow}+4\im\ket{\uparrow\downarrow}-2\ket{\downarrow\downarrow}\right)
+		\end{equation*}
+		je provázaný, a svou odpověď zdůvodněte. 
+		Nalezněte normalizační faktor $\mathcal{N}$.
+
+		\item
+		Bude kvantová teleportace qubitu v obecném stavu $\ket{\psi}\alpha\ket{\uparrow}+\beta\ket{\downarrow}$ od Alice k Bobovi fungovat i v případě, že Alice a Bob budou mít k dispozici provázaný Bellův stav
+		\begin{equation*}
+			\ket{\Phi_{2}}=\frac{1}{\sqrt{2}}\left[\ket{\uparrow\downarrow}+\ket{\downarrow\uparrow}\right]?
+		\end{equation*}
+		Pokud ano, jako transformaci musí provést Bob na základě klasické informace získané od Alice, aby získal stav identický s tím, který Alice odesílala?
+	\end{enumerate}
+
+	V zápisu stavů je použito zjednodušeného značení $\ket{\uparrow\downarrow}\equiv\ket{\uparrow}_{1}\otimes\ket{\downarrow}_{2}$ (analogicky i pro ostatní kombinace spinu nahoru a dolů a pro ostatní kombinace podsystémů).
+
+	\newpage
+\end{homework}
+
 \printindex
 
 %\bibliography{Z:/Share/Fyzika/Bibliography/References.bib}
