--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -165,6 +165,23 @@
 	Využijte vztahu mezi energií a hybností fotonů $E=pc$.    
 \end{homework}
 
+\begin{homework}
+\exercise[29.10.2024]{Elektron při Comptonově rozptylu}
+	\begin{itemize}
+	\item
+		Odvoďte vztah pro úhel $\varphi$, pod kterým vylétá elektron $e^{-}$ po Comptonově rozptylu, a vyjádřete ho pomocí vlnových délek nalétávajícího a rozptýleného fotonu $\lambda,\lambda'$ a Comptonovy vlnové délky $\lambda_{C}=h/(m_{e}c)$.
+		\begin{center}
+			\includegraphics[width=0.8\linewidth]{Compton.png}
+		\end{center}
+	
+	\item 
+		Zakreslete graf závislosti $\varphi(\lambda')$ pro $\lambda'\in(\lambda,\lambda+2\lambda_{C})$ a vhodně zvolené $\lambda$.
+
+	\end{itemize}
+	\emph{Nápověda:} Vyjděte ze zákona zachování hybnosti ve směru nalétávajícího fotonu $\gamma$ a ve směru kolmém.
+	\newpage
+\end{homework}
+
 % \begin{homework}
 % \exercise[9.10.2023]{Žárovka}
 % 	\begin{enumerate}
@@ -183,17 +200,6 @@
 
 % 	\newpage
 % \end{homework}
-
-% \begin{homework}
-% 	\exercise[16.10.2023]{Elektron při Comptonově rozptylu}
-% 		Odvoďte vztah pro úhel $\varphi$, pod kterým vylétá elektron $e^{-}$ po Comptonově rozptylu, a vyjádřete ho pomocí vlnových délek nalétávajícího a rozptýleného fotonu $\lambda,\lambda'$ a Comptonovy vlnové délky $\lambda_{C}=h/(m_{e}c)$.
-% 		\begin{center}
-% 			\includegraphics[width=0.8\linewidth]{Compton.png}
-% 		\end{center}
-
-% 		\emph{Nápověda:} Vyjděte ze zákona zachování hybnosti ve směru nalétávajícího fotonu $\gamma$ a ve směru kolmém.
-% 		\newpage
-% 	\end{homework}
 	
 % \begin{homework}
 % 	\setcounter{figure}{0}
