Reference Encyclopedia Britannica

--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -137,6 +137,8 @@
 	\item Paul Ewart, {\it Atomic Physics} (Morgan \& Claypool Publishers, 2019).
 	
 	\item Gordon W.F. Drake, {\it Springer Handbook of Atomic, Molecular, and Optical Physics} (Springer Nature Switzerland AG, 2023).
+
+	\item G.L. Squires, {\it Quantum mechanics}, Encyclopedia Britannica, 16. říjen 2024, \url{https://www.britannica.com/science/quantum-mechanics-physics}.
 \end{itemize}
 
 \input{CerneTeleso}\np
