--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -181,7 +181,26 @@
 
 	\end{itemize}
 	\emph{Nápověda:} Vyjděte ze zákona zachování hybnosti ve směru nalétávajícího fotonu $\gamma$ a ve směru kolmém.
-	\newpage
+\end{homework}
+
+\begin{homework}
+	\exercise[26.11.2024]{Klasický model atomu vodíku}
+	\begin{itemize}
+		\item     
+			Nalezněte vztah pro frekvenci kruhového pohybu elektronu v klasickém modelu vodíkového atomu za předpokladu, že elektron neztrácí energii vyzařováním a že se nachází ve vzdálenosti $r=\beta a_{0}$ od protonu, kde $a_{0}$ je Bohrův poloměr.
+			Výsledný vztah {\bf vyjádřete pomocí konstanty jemné struktury $\alpha$}.
+			Vypočítejte číselně pro $\beta=1$.
+
+		\item
+			Jaká by byla hodnota parametru $\beta$, pokud by elektron obíhal proton s danou frekvencí $f$?
+			Jaké hodnotě kvantového čísla $n$ Bohrova modelu atomu vodíku by odpovídala tato oběžná dráha?
+			Vyřešte obecně a pak pro číselnou hodnotu $f=1\unit{s^{-1}}$.
+
+		\item
+			Na cvičení jsme si ukázali, že obíhající elektron ve skutečnosti kvůli dostředivému zrychlení postupně ztrácí energii elektromagnetickým vyzařováním a odvodili jsme vztah pro dobu $T$, za kterou elektron v atomu vodíku \uv{spadne} na proton.
+			Nalezněte vztah pro okamžitý vyzařovaný výkon v čase $P(t)$ a vykreslete graf pro $t\in[0,T]$.
+			Elektron je v čase $t=0$ na orbitě s poloměrem $a_{0}$.
+	\end{itemize}
 \end{homework}
 
 % \begin{homework}
