--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -192,12 +192,12 @@
 			Vypočítejte číselně pro $\beta=1$.
 
 		\item
-			Jaká by byla hodnota parametru $\beta$, pokud by elektron obíhal proton s danou frekvencí $f$?
+			Jaká bude velikost $\beta$, pokud elektron obíhá proton se zadanou frekvencí $f$?
 			Jaké hodnotě kvantového čísla $n$ Bohrova modelu atomu vodíku by odpovídala tato oběžná dráha?
-			Vyřešte obecně a pak pro číselnou hodnotu $f=1\unit{s^{-1}}$.
+			Vyřešte obecně a pak pro číselnou hodnotu $f=1\unit{Hz}$.
 
 		\item
-			Na cvičení jsme si ukázali, že obíhající elektron ve skutečnosti kvůli dostředivému zrychlení postupně ztrácí energii elektromagnetickým vyzařováním a odvodili jsme vztah pro dobu $T$, za kterou elektron v atomu vodíku \uv{spadne} na proton.
+			Na cvičení jsme si ukázali, že obíhající elektron ve skutečnosti kvůli dostředivému zrychlení postupně ztrácí energii elektromagnetickým vyzařováním, a odvodili jsme vztah pro dobu $T$, za kterou elektron v atomu vodíku \uv{spadne} na proton.
 			Nalezněte vztah pro okamžitý vyzařovaný výkon v čase $P(t)$ a vykreslete graf pro $t\in[0,T]$.
 			Elektron je v čase $t=0$ na orbitě s poloměrem $a_{0}$.
 	\end{itemize}
