--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -203,6 +203,38 @@
 	\end{itemize}
 \end{homework}
 
+\begin{homework}
+	\exercise[10.12.2024]{Rozměr vzbuzeného vodíku}
+		Vodík se nachází ve vzbuzeném $2s$ stavu.
+		Jeho radiální část vlnové funkce je tedy
+		\begin{equation*}
+			R_{20}(r)=2\left(\frac{1}{2a_{0}}\right)^{\frac{3}{2}}\left(1-\frac{r}{2a_{0}}\right)\e^{-\frac{r}{2a_0}}.
+		\end{equation*}
+
+		\begin{enumerate}
+			\item
+				Nalezněte vzdálenost $r_{p}$ od jádra, na které naměříte elektron s největší pravděpodobností.
+
+			\item
+				Určete střední poloměr atomu (střední hodnotu vzdálenost $\langle r\rangle$ od jádra, na které naměříte elektron).
+
+			\item
+				Jak se změní měřený rozměr atomu, pokud se vodík bude nacházet ve $2p$ stavu, jehož radiální část vlnové funkce je
+				\begin{equation*}
+					R_{21}(r)=\frac{1}{\sqrt{3}}\left(\frac{1}{2a_{0}}\right)^{\frac{3}{2}}\frac{r}{a_{0}}\e^{-\frac{r}{2a_{0}}}?
+				\end{equation*}
+
+			\item
+				Jaká bude vlnová délka vyzářeného fotonu, když elektron spadne ze vzbuzeného stavu do základního stavu?
+				Bude možné tento přechod pozorovat pouhým okem?
+
+			\item
+				Vyhledejte si vyjádření kulových funkcí pro $p$ podslupku a dokažte, že pro ni platí Unsöldův teorém (tj. že tato uzavřená podslupka má sféricky symetrické rozložení náboje).
+		\end{enumerate}
+
+		\newpage
+\end{homework}
+
 % \begin{homework}
 % \exercise[9.10.2023]{Žárovka}
 % 	\begin{enumerate}
