--- a/Sbirka.tex
+++ b/Sbirka.tex
@@ -235,6 +235,38 @@
 		\newpage
 \end{homework}
 
+\begin{homework}
+	\exercise[24.12.2024]{Zhroucení Slunce}
+		Předpokládejte, že naše Slunce se po vyhoření zhroutí a vznikne z něj bílý trpaslík tvořený pouze uhlíkem $^{12}\mathrm{C}$.  
+		Předpokládejte, že hustota trpaslíka je konstantní.
+
+		\begin{enumerate}
+			\item Spočítejte číselnou hodnotu Fermiho energie $E_{F}$ nerelativistického elektronového degenerovaného plynu a odpovídající Fermiho rychlost elektronů $v_{F}$ danou vztahem
+			\begin{equation*}
+				E_{F}=\frac{1}{2}m_{e}v_{F}^{2}.
+			\end{equation*}
+			Vyjádřete Fermiho rychlost v násobcích rychlosti světla.
+			Je nerelativistická aproximace oprávněná?
+			
+			\item Na základě uvedených předpokladů určete číselně poloměr vzniklého bílého trpaslíka.
+
+			\item Předpokládejte, že degenerovaný elektronový plyn je ultrarelativistický a určete Chandrasekharovu mez.
+				Najděte její číselnou hodnotu vyjádřenou v násobcích hmotnosti Slunce.
+			
+			\item Je-li hvězda těžší, než kolik udává Chandrasekharova mez, dojde k jejímu dalšímu zhroucení a vznikne neutronová hvězda.
+			Spočítejte mezní hmotnost pro sférickou hvězdu o konstantní hustotě tvořenou \emph{degenerovaným neutronovým plynem} (tj. předpokládejte, že hvězda je tvořena pouze neutrony). 
+			Mezní hmotnost vyjádřete v násobcích hmotnosti Slunce.
+		\end{enumerate}
+
+		{\it Poznámka:} Předpoklad konstantní hustoty je velmi hrubý. 
+		Po započtení hustoty správně rostoucí s hloubkou pod povrchem a dalších korekcí vycházejí obě meze nižší.
+
+		{\it Poznámka:} Mezní hmotnost pro neutronovou hvězdu se nazývá Tolmanova-Oppenheimerova-Volkoffova mez.
+		Po překročení této meze dojde k dalšímu zhroucení a vzniku černé díry.
+
+		\newpage
+\end{homework}
+
 % \begin{homework}
 % \exercise[9.10.2023]{Žárovka}
 % 	\begin{enumerate}
