Oprava vzorečku Rydbergovy konstanty

--- a/Vzorecky.tex
+++ b/Vzorecky.tex
@@ -81,12 +81,17 @@
 
     \item Rydbergova konstanta
         \begin{equation}
-            R_{\infty}=\left(\frac{e^{2}}{4\pi\epsilon_{0}}\right)\frac{m_{e}}{2h^{2}}=hc\frac{\alpha^{2}}{2\lambda_{c}}\approx 13\c6\unit{eV}
+            R_{\infty}=\left(\frac{e^{2}}{4\pi\epsilon_{0}}\right)^{2}\frac{m_{e}}{2h^{2}}=hc\frac{\alpha^{2}}{2\lambda_{c}}\approx 13\c6\unit{eV}
+        \end{equation}
+
+    \item Comptonova vlnová délka
+        \begin{equation}
+            \lambda_{c}=\frac{h}{m_{e}c}\approx2\c43\cdot10^{-12}\unit{m}
         \end{equation}
 
     \item Bohrův poloměr
         \begin{equation}
-            a_{0}=\frac{4\pi\epsilon}{e^{2}}\frac{\hbar^{2}}{m_{e}}=\frac{\lambda_{c}}{\alpha}\approx5\c3\cdot10^{-11}\unit{m}
+            a_{0}=\frac{4\pi\epsilon_{0}}{e^{2}}\frac{\hbar^{2}}{m_{e}}=\frac{\lambda_{c}}{\alpha}\approx5\c3\cdot10^{-11}\unit{m}
         \end{equation}
 
     \item Boltzmannova konstanta
